//
// Created by Bruce on 2019-10-12.
//

#ifndef FIGHTCLUB_UIMANAGER_H
#define FIGHTCLUB_UIMANAGER_H


class UIManager {
public:
    void pause();
    void resume();
    void lose();
    void win();
    void quit();
    void settings();
};


#endif //FIGHTCLUB_UIMANAGER_H
